--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,8 @@
   "name": "jd-narrator",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.1"
-  },
-  "overrides": {
-    "bootstrap-sass": {
-      "main": [
-        "assets/stylesheets/_bootstrap.scss",
-        "assets/fonts/bootstrap/*",
-        "assets/javascripts/bootstrap.js"
-      ]
-    }
+    "modernizr": "~2.8.1",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "chai": "~3.2.0",
