--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "modernizr": "~2.8.1",
     "jquery": "~2.1.4",
-    "ScrollMagic": "~2.0.5"
+    "ScrollMagic": "~2.0.5",
+    "requirejs": "~2.1.20"
   },
   "devDependencies": {
     "chai": "~3.2.0",
