--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "image-map-resizer": "~1.0.0",
     "jquery": "~2.1.4",
     "jquery-touchswipe": "~1.6.12",
+    "magnific-popup": "~1.0.0",
     "modernizr": "~2.8.1",
     "requirejs": "~2.1.20",
     "ScrollMagic": "~2.0.5"
