--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "dotenv": "^1.2.0",
+    "gulp-ignore": "^2.0.2",
     "gulp-serve": "^1.2.0",
     "requirejs": "^2.1.20"
   }
